traces/bug_163.txt
src/medit/path.c:124: error: DEAD_STORE
  The value written to &path (type straj) is never used.
Showing all 1 steps of the trace


src/medit/path.c:124:3: Write of unused value
122.     if ( !sc->path.np ) return;
123.     if ( ddebug )  fprintf(stdout,"pathFollow %d\n",sc->path.np);
124.     path = sc->path;
         ^
125.     if ( sc->path.sec < 0 )
126.       nbp = sc->path.np;
